--- a/background.html
+++ b/background.html
@@ -30,9 +30,9 @@
        Improving sewage treatment capacity and energy efficiency of power plants is a significant step toward decarbonization, especially since Japan relies heavily on fossil fuels as an energy source.
        Therefore, we decided to move to solve the problem caused by biofilm.
        Once biofilms are formed, they adhere firmly to solid surfaces and do not easily break down. So instead, we have decided to prevent the formation of biofilms.
-       Bactria creates biofilm, and they live alone in usual. However, at the same time, they secrete small molecules, called quormone, into the environment.When the concentration of quormone is low, nothing happens. On the other hand, once it exceeds a certain threshold, bacteria start creating a biofilm. This mechanism of communication among bacteria is what we call quorum sensing.
-       Thus, by inhibiting this circuit that contributes to biofilm formation, we thought we could stop the formation of biofilms.
-       'Quorum Hackers' are molecular robots composed of liposomes that block quorum sensing by releasing aptamers to quormones when the concentration of it gets high enough in the environment.</p>
+       Bactria creates biofilm, and they live alone in usual. However, at the same time, they secrete small molecules, called quormone, into the environment. When the concentration of quormone is low, nothing happens. On the other hand, once it exceeds a certain threshold, bacteria start creating a biofilm. This mechanism of communication among bacteria is what we call quorum sensing.
+       Thus, by inhibiting this circuit that contributes to biofilm formation, we thought that we could stop the formation of biofilms.
+       "Quorum Hackers" are molecular robots composed of liposomes that block quorum sensing by releasing the aptamers to quormones when the concentration of it gets high enough in the environment.</p>
     </div>
 </main>
 </body>
