--- a/design.html
+++ b/design.html
@@ -75,8 +75,8 @@
             <p>1. PEG-DNA complex shield which prevents the membrane fusion<sup>4)</sup></p>
             <p>2. pore formation peptide Magainin 2 which creates the pore for releasing DNA Aptamer<sup>5)</sup></p>
             <p>3. small liposome composed of part 1 and part 2</p>
-            <p>The PEG-DNA complex shield modified on the liposome is degraded by strand displacement reaction upon recognition of Output 2, allowing the liposome to fuse with the outer GUVs by diffusion.<br>
-                Membrane fusion introduces a pore formed by Magainin 2 on the liposome in advance into the GUVs, and aptamers are released outside through the pore.<br>
+            <p>The PEG-DNA complex shield modified on the liposome is degraded by strand displacement reaction upon recognition of Output 2, allowing the liposome to fuse with the outer GUVs by diffusion.
+                Membrane fusion introduces a pore formed by Magainin 2 on the liposome in advance into the GUVs, and aptamers are released outside through the pore.
                 The aptamers released to the environment bind with quormone and inhibit quorum sensing, which leads to the prevention of biofilm formation.</p>
         </section>
         <section class="scroll-point" id="area-5">
