--- a/simulation.html
+++ b/simulation.html
@@ -48,8 +48,8 @@
         </section>
         <section class="scroll-point" id="area-2">
             <h2>Thermodynamic simulation</h2>
-            <p>The thermodynamic stability of the DNA strand was investigated using DINAMelt.</p>
-            <p>The Tm values for hybridization of DNA Aptamer (Pool<sub>99</sub>) and output 1 and the predicted heat capacity of the complex are shown below.</p>
+            <p>The thermodynamic stability of the DNA strand was investigated using DINAMelt.<br>
+               The Tm values for hybridization of DNA Aptamer (Pool<sub>99</sub>) and Output 1 and the predicted heat capacity of the complex are shown below.</p>
             <img src="images/aptamer+output_Tm.png">
             <p>Fig.1 The Tm values for hybridization of DNA Aptamer (Pool<sub>99</sub>) and output 1 (NaCl:40mM  MgCl<sub>2</sub>:12.5mM)</p>
             <p>The predicted Tm value was 66.0°C. This result confirms that thermal dissociation of output1 from DNA Aptamer (Pool<sub>99</sub>) does not occur at 37°C.</p>
