--- a/simulation.html
+++ b/simulation.html
@@ -41,7 +41,7 @@
         <section class="scroll-point" id="area-1">
             <h2>Simulation Items</h2>
             <li>1. Thermodynamic simulation</li>
-            <li>2. Structural prediction</li>
+            <li>2. Structural prediction of DNA Aptamer</li>
             <li>3. The design of amplification circuit</li>
             <li>4. Threshold setting</li>
             <p>Before the experiments of electrophoresis, we made predictions about the stability of each DNA strand and the possible conformations it could take. We also simulated the threshold values and amplification rates for the amplification mechanism inside the molecular robot.</p>
@@ -55,7 +55,7 @@
             <p>The predicted Tm value was 66.0°C. This result confirms that thermal dissociation of output1 from DNA Aptamer (Pool<sub>99</sub>) does not occur at 37°C.</p>
         </section>
         <section class="scroll-point" id="area-3">
-            <h2>Structural prediction</h2>
+            <h2>Structural prediction of DNA Aptamer</h2>
             <p>The prediction of secondary structure of DNA Aptamer (Pool<sub>99</sub>) was performed using NUPACK. The results are shown below.</p>
             <img src="images/NUPACK_Aptamer.png">
             <p>Fig.2 The predicted secondary structure of DNA Aptamer (Pool<sub>99</sub>).</p>
