--- a/simulation.html
+++ b/simulation.html
@@ -104,8 +104,9 @@
             <li>[AB] = DNA aptamer and C4-HSL complex (Aptamer sensor)</li>
             <li>[C] = Concentration of DNA aptamer</li>
             <li>Kd = Dissociation constant</li>
-            <p>The following demonstrates a circuit in which 0.5nM input is detected, resulting in amplification of aptamer.</p>
-            <p>The initial concentrations of template2to1, which outputs aptamer by the input, template1to1, which amplifies input, and the initial concentrations of input were set at 10nM, 100nM, and 0.5nM, respectively. Then, COPASI was used to simulate the change in concentration of aptamer at different drain concentrations.</p>
+            <p>The following demonstrates a circuit in which 0.5 nM input is detected, resulting in amplification of aptamer.</p>
+            <p>The initial concentrations of template2to1, which outputs aptamer by the input, template1to1, which amplifies input, and the initial concentrations of input were set at 10 nM, 100 nM, and 0.5 nM, respectively. 
+                Then, COPASI was used to simulate the change in concentration of aptamer at different drain concentrations.</p>
             <img src="images/Aptamer_DifferentDrain.png">
             <p>Fig.6　Change in aptamer concentration with different drain concentrations</p>
             <p>Ct in Fig.6 represents the amplification start time of aptamer at each drain concentration. The start time of Aptamer amplification increased with increasing drain concentration, and the concentration remained constant after Ct.</p>
