--- a/background.html
+++ b/background.html
@@ -24,7 +24,7 @@
 <main>
     <h1>Background</h1>
     <div width="70%">
-       <p>Biofilms are slimy aggregates formed by microorganisms. It is a mixture of extracellular polysaccharides, proteins, lipids and nuclei with a three-dimensional structure, and it is often mentioned as a "city for microbes".
+       <p>Biofilms are slimy aggregates formed by microorganisms. It is a mixture of extracellular polysaccharides, proteins, lipids, and nuclei with a three-dimensional structure, and it is often mentioned as a "city for microbes".
        Biofilms are formed in many different places around us, for instance, in the bathroom, kitchen, or even our mouths.
        Biofilms also harm the environment, for example, biofilms formed in the sewage pipe can cause corrosion and reduced performance, or if it is created in the heat exchanger in the power plant, it lowers the energy efficiency.<sup>1)</sup> <sup>2)</sup>
        Improving sewage treatment capacity and energy efficiency of power plants is a significant step toward decarbonization, especially since Japan relies heavily on fossil fuels as an energy source.
