--- a/design.html
+++ b/design.html
@@ -42,6 +42,8 @@
         </section>
     </aside> -->
     <main id="main-area">
+        <img src="images/detection.png">
+        <p>Fig. 1 Design of “Quorum Hacker”.</p>
         <section class="scroll-point" id="area-1">
             <h2>Concept</h2>
             <p>This page describes our molecular robot, "Quorum Hacker," which inhibits quorum sensing and prevents biofilm formation. </p>
@@ -56,7 +58,11 @@
             <p>3. DNA-converter which releases Output 2 in accordance of Input 1 (the output of DNA-based transmembrane signaling system)</p>
             <p>When the DNA aptamer detects the quormone, Output 1 is released as a signal, and two transmembrane DNA strands on the giant vesicle (complementary DNA to the respective left and right ends of Output 1) are connected via Output 1.
                Inside the transmembrane signalling system across the lipid bilayer, a strand displacement reaction of Input 1 triggered by complexation of the transmission mechanism releases a short DNA strand of about 30 bases as Output 2. Output 2 activates the processor part.</p>
+            <img src="images/sensor.png">
+            <p>Fig. 2 Sensor part of “Quorum Hacker”.</p>
             <img src="movies/sensor.gif" class="gif">
+            <p>Fig. 3 Mechanism of quormone sensing.</p>
+
         </section>
         <section class="scroll-point" id="area-3">
             <h2>Processor</h2>
@@ -64,10 +70,12 @@
             <p>1. Quormone concentration detection circuit<sup>3)</sup></p>
             <p>2. DNA amplification circuit which produces DNA aptamer<sup>3)</sup></p>
             <p>The concentration detection circuit modifies the end of Output 2 by a drain and inhibits subsequent enzymatic reactions, and DNA amplification is withheld until a certain threshold is exceeded. When the amount of Output 2 exceeds the threshold, the concentration detection circuit overflows, which activates the DNA amplification circuit, and the mass synthesis of aptamers initiates.</p>
+            <img src="images/processor.png">
+            <p>Fig. 4 Processor part of “Quorum Hacker”.</p>
             <img src="movies/PENtoolbox.gif" class="gif">
-            <p>The amplification system with PEN toolbox</p>
+            <p>Fig. 5 Mechanism of transmembrane signaling system.</p>
             <img src="movies/drain.gif" class="gif">
-            <p>The prevention of DNA amplification with drain</p>
+            <p>Fig. 6 Mechanism of quormone concentration detection circuit.</p>
         </section>
         <section class="scroll-point" id="area-4">
             <h2>Actuator</h2>
@@ -78,6 +86,8 @@
             <p>The PEG-DNA complex shield modified on the liposome is degraded by strand displacement reaction upon recognition of Output 2, allowing the liposome to fuse with the outer GUVs by diffusion.<br>
                 Membrane fusion introduces a pore formed by Magainin 2 on the liposome in advance into the GUVs, and aptamers are released outside through the pore.<br>
                 The aptamers released to the environment bind with quormone and inhibit quorum sensing, which leads to the prevention of biofilm formation.</p>
+            <img src="images/actuator.png">
+            <p>Fig. 7 Actuator part of “Quorum Hacker”.</p>
         </section>
         <section class="scroll-point" id="area-5">
             <h2>Supplements</h2>
