--- a/experiment.html
+++ b/experiment.html
@@ -56,8 +56,8 @@
                 <h4>【Results and Discussion】</h4>
                     <p>Fig.1 shows the results of Experiment 1.</p>
                     <img src="images/experiment2Fig1.png">
-                    <p>Fig.1 PAGE analysis</p>
-                    <p>(lane 1: Ladder (20 bp, 7 µL)、lane 2: Output 1 (300 nM, 7.5 µL), lane 3: DNA Aptamer (Pool<sub>99</sub>) (300 nM, 7.5 µL), lane 4: Output1 - DNA Aptamer (Pool<sub>99</sub>) (300 nM, 7.5 µL), lane 5: Ladder (20 bp, 7 µL))</p>
+                    <p>Fig.1 PAGE analysis of Experiment 1<br>
+                    (lane 1: Ladder (20 bp, 7 µL)、lane 2: Output 1 (300 nM, 7.5 µL), lane 3: DNA Aptamer (Pool<sub>99</sub>) (300 nM, 7.5 µL), lane 4: Output1 - DNA Aptamer (Pool<sub>99</sub>) (300 nM, 7.5 µL), lane 5: Ladder (20 bp, 7 µL))</p>
                     <p>Fig.1 shows that a single peak between 20 bp and 40 bp (peak 1) appeared in lane 2. 
                         Also, a single peak between 80bp and 100 bp (peak 2) appeared in lane 3. 
                         In lane 4, three peaks have appeared, peak 1, peak 2, and a peak between 120 bp and 140 bp (peak 3). 
@@ -76,8 +76,8 @@
                 <h4>【Results and Discussion】</h4>
                     <p>Fig.2 shows the results of Experiment 2</p>
                     <img src="images/experiment2Fig2.png">
-                    <p>Fig.2 PAGE analysis</p>
-                    <p>(lane 1: Ladder (20 bp, 7 µL), lane 2: 300 nM Output 1 (7.5 µL), lane 3: 300 nM DNA Aptamer (Pool<sub>99</sub>) (7.5 µL), lane 4: 300 nM Aptamer sensor (Output1 - DNA Aptamer (Pool<sub>99</sub>)) (7.5 µL), lane 5: 600 nM Aptamer sensor (Output1 - DNA Aptamer (Pool<sub>99</sub>)) + 1 mM C4-HSL, lane 6: Ladder (20 bp, 7 μL))</p>
+                    <p>Fig.2 PAGE analysis of Experiment 2<br>
+                    (lane 1: Ladder (20 bp, 7 µL), lane 2: 300 nM Output 1 (7.5 µL), lane 3: 300 nM DNA Aptamer (Pool<sub>99</sub>) (7.5 µL), lane 4: 300 nM Aptamer sensor (Output1 - DNA Aptamer (Pool<sub>99</sub>)) (7.5 µL), lane 5: 600 nM Aptamer sensor (Output1 - DNA Aptamer (Pool<sub>99</sub>)) + 1 mM C4-HSL, lane 6: Ladder (20 bp, 7 μL))</p>
                     <p>Comparing Lane 4 and Lane 5, it appears that the 120bp-140bp peak seen in Lane 4 has disappeared in Lane 5. 
                         Also, the Output1 (32 bp) and DNA Aptamer (Pool<sub>99</sub>) peaks of lane 5 seem darker compared to lane 4. 
                         Therefore, we inferred that under the existence of C4-HSL (quormone), the hybridized double-stranded DNA (Aptamer sensor) dissolved into two components.</p>
