--- a/design.html
+++ b/design.html
@@ -42,14 +42,15 @@
         </section>
     </aside> -->
     <main id="main-area">
-        <img src="images/detection.png">
-        <p>Fig. 1 Design of “Quorum Hacker”.</p>
+        <h1>Design</h1>
         <section class="scroll-point" id="area-1">
             <h2>Concept</h2>
             <p>This page describes our molecular robot, "Quorum Hacker," which inhibits quorum sensing and prevents biofilm formation. </p>
                "Quorum Hacker" consists of a giant ​​unilamellar vesicles (GUVs) as the basic framework, a sensor part consists of DNA aptamers and a DNA-based transmembrane signalling system, a processor part consists of a circuit for detecting the concentration of quormone, and a circuit for amplifying the DNA aptamers used for quorum sensing inhibition, and an actuator part consists of the mechanism triggered by the DNA signal, which induces membrane fusion of the encapsulated liposome and GUVs. <br>
                "Quorum Hacker" releases the DNA aptamer through the pore formed on the surface of the GUVs by membrane fusion to inhibit quorum sensing among biofilm-forming bacteria.</p>
-        </section>
+               <img src="images/detection.png">
+               <p>Fig. 1 Design of “Quorum Hacker”.</p>
+            </section>
         <section class="scroll-point" id="area-2">
             <h2>Sensor</h2>
             <p>The sensor part of “Quorum Hacker” is composed of three parts described below.</p>
