--- a/simulation.html
+++ b/simulation.html
@@ -44,7 +44,8 @@
             <li>2. Structural prediction of DNA Aptamer</li>
             <li>3. The design of amplification circuit</li>
             <li>4. Threshold setting</li>
-            <p>Before the experiments of electrophoresis, we made predictions about the stability of each DNA strand and the possible conformations it could take. We also simulated the threshold values and amplification rates for the amplification mechanism inside the molecular robot.</p>
+            <p>Before the experiments of electrophoresis, we made predictions about the stability of each DNA strand and the possible conformations it could take. 
+                We also simulated the threshold values and amplification rates for the amplification mechanism inside the molecular robot.</p>
         </section>
         <section class="scroll-point" id="area-2">
             <h2>Thermodynamic simulation</h2>
