--- a/elsi.html
+++ b/elsi.html
@@ -60,7 +60,7 @@
             <h2>Potential responses from non-researchers</h2>
             <p>Q: Is it safe if I eat it by mistake?<br>
                A: It is not recommended, but since we do not use highly toxic substances, it should not be a problem.</p>
-            <p>Q: Is there any harm if the robot breaks and the contents are released?
+            <p>Q: Is there any harm if the robot breaks and the contents are released?<br>
                A: DNA and liposomes are degraded in the environment, so it is not considered to be a major problem.</p>
         </section>
         <section class="scroll-point" id="area-5">
