--- a/background.html
+++ b/background.html
@@ -34,6 +34,9 @@
        Thus, by inhibiting this circuit that contributes to biofilm formation, we thought that we could stop the formation of biofilms.
        "Quorum Hackers" are molecular robots composed of liposomes that block quorum sensing by releasing the aptamers to quormones when the concentration of it gets high enough in the environment.</p>
     </div>
+    <h2>References</h2>
+    <li>1) Lena Venø Poulsen, <i>LWT - Food Science and Technology</i>. 1999, 321-326.</li>
+    <li>2) Mattila-Sandholm, <i>et al. Food Reviews International</i> 2009, 573-603.</li>
 </main>
 </body>
 <div id="footer"></div>
