--- a/design.html
+++ b/design.html
@@ -74,7 +74,7 @@
             <img src="images/processor.png">
             <p>Fig. 4 Processor part of “Quorum Hacker”.</p>
             <img src="movies/PENtoolbox.gif" class="gif">
-            <p>Fig. 5 Mechanism of transmembrane signaling system.</p>
+            <p>Fig. 5 Mechanism of transmembrane signaling system and amplification system.</p>
             <img src="movies/drain.gif" class="gif">
             <p>Fig. 6 Mechanism of quormone concentration detection circuit.</p>
         </section>
