--- a/design.html
+++ b/design.html
@@ -59,6 +59,9 @@
             <p>3. DNA-converter which releases Output 2 in accordance of Input 1 (the output of DNA-based transmembrane signaling system)</p>
             <p>When the DNA aptamer detects the quormone, Output 1 is released as a signal, and two transmembrane DNA strands on the giant vesicle (complementary DNA to the respective left and right ends of Output 1) are connected via Output 1.
                Inside the transmembrane signalling system across the lipid bilayer, a strand displacement reaction of Input 1 triggered by complexation of the transmission mechanism releases a short DNA strand of about 30 bases as Output 2. Output 2 activates the processor part.</p>
+            <p>DNA Sequences<br>
+                Output 1: CACGACTCACTGCAGTTTTTTTTTTTTTTTTT<br>
+                DNA Aptamer(pool<sub>99</sub>): CCATCCACACTCCGCAAGTGGGGAGGGGAGAGACGACGATCCTGTGGGTTTTCTGCAGTGAGTCGTGTTTTCGACTTATTGCGTCGGCTGCCTCTACAT</p>
             <img src="images/sensor.png">
             <p>Fig. 2 Sensor part of “Quorum Hacker”.</p>
             <img src="movies/sensor.gif" class="gif">
