--- a/elsi.html
+++ b/elsi.html
@@ -65,9 +65,7 @@
         </section>
         <section class="scroll-point" id="area-5">
             <h2>Other applicable areas</h2>
-            <p>“Quorum Hacker” expected to be applied to<br>
-                ・beneficial biofilm utilization technology<br>
-                ・Medical field</p>
+            <p>“Quorum Hacker” is also expected to be applied to beneficial biofilm utilization technology and medical field.</p>
         </section>
     </main>
     <aside id="sub-area">
