--- a/team.html
+++ b/team.html
@@ -46,8 +46,8 @@
         <div class="row">
             <div class="col">
                 <p>Name: Takumi Nishida<br>
-                    Role:Experiment<br>
-                    University:Kansai University<br>
+                    Role: Experiment<br>
+                    University: Kansai University<br>
                     Major: Chemistry, Materials and Bioengineering<br>
                 </p>
             </div>
@@ -101,7 +101,7 @@
                 <p>Name: Akito Shima<br>
                     Role: Presenter, Robot design<br>
                     University: Kyushu University<br>
-                    Major: Department of Biology<br>
+                    Major: Biology<br>
                 </p>
             </div>
         </div>
@@ -122,7 +122,7 @@
             </div>
         </div>
     </div>
-    <h1>Instructers</h1>
+    <h1>Mentors</h1>
     <div class="container kakomi-box3">
         <div class="row">
             <div class="col">
